[package]
name = "ifconfig"
version = "0.1.1"
authors = ["Gurinder Singh <gurinder.singh@1e.com>"]
description = "A cross platform way to get information about network adapters"
license = "MIT"
repository = "https://github.com/gurry/ifconfig"

[dependencies]
failure = "0.1.1"
libc = "0.2.34"
foreign-types = "0.3.2"
winapi = "0.2.8"
