[package]
name = "ifconfig"
version = "0.1.1"
authors = ["Gurinder Singh <gurinder.singh@1e.com>"]
description = "A cross platform way to get information about network adapters"
license = "MIT"
repository = "https://github.com/gurry/ifconfig"

[dependencies]
failure = "0.1"
bitflags = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"

# [target.'cfg(linux)'.dependencies]
# pnetlink = "0.0"
# libc = "0.2"
